--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
-    "firebase": "^9.6.1"
+    "firebase": "9.1.3"
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
