--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.4.1",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
-    "firebase": "9.1.3"
+    "firebase": "^9.6.0"
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
